# crypto-alpha-engine

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  pyproject.toml
.github/workflows/: test.yml
crypto_alpha_engine/: __init__.py  exceptions.py  types.py
crypto_alpha_engine/backtest/: __init__.py  costs.py  engine.py  metrics.py  simulation.py  walk_forward.py
crypto_alpha_engine/data/: __init__.py  downloader.py  free_sources.py  loader.py  protocol.py  registry.py  schemas.py  splits.py
crypto_alpha_engine/data/sources/: __init__.py  alternative_fear_greed.py  bitmex_perp.py  blockchain_com.py  coinbase_spot.py  coingecko_dominance.py  cryptopanic_news.py  defillama_stablecoin.py  yfinance_macro.py
crypto_alpha_engine/factor/: __init__.py  ast.py  compiler.py  complexity.py  parser.py  similarity.py
crypto_alpha_engine/ledger/: __init__.py  duplicate.py  ledger.py
crypto_alpha_engine/operators/: __init__.py  causality_check.py  conditional.py  crypto.py  math.py  registry.py  timeseries.py
crypto_alpha_engine/regime/: __init__.py  breakdown.py  tagger.py
crypto_alpha_engine/sandbox/: __init__.py
crypto_alpha_engine/statistics/: __init__.py  deflated_sharpe.py
docs/: adding_custom_sources.md  factor_design.md  methodology.md
examples/: research_workflow.py
scripts/: download_all_data.py  generate_test_fixtures.py
tests/: conftest.py
tests/fixtures/: btc_funding_8h_bitmex_perp.parquet  btc_usd_1h_coinbase_spot.parquet  eth_usd_1h_coinbase_spot.parquet
tests/integration/: test_engine_e2e.py  test_engine_ledger.py  test_live_sources.py  test_operators_on_fixtures.py
tests/property/: test_splits_no_leakage.py
tests/unit/: test_ast.py  test_bitmex_perp.py  test_coinbase_spot.py  test_compiler.py  test_complexity.py  test_costs.py  test_custom_source_registration.py  test_deflated_sharpe.py  test_downloader.py  test_duplicate.py  test_engine.py  test_exceptions.py  test_free_sources.py  test_http_sources.py  test_ledger.py  test_loader.py  test_metrics.py  test_operators_causality.py  test_operators_conditional.py  test_operators_crypto.py  test_operators_math.py  test_operators_timeseries.py  test_package.py  test_parser.py  test_protocol.py  test_regime_breakdown.py  test_regime_tagger.py  test_registry.py  test_schemas.py  test_similarity.py  test_simulation.py  test_source_provenance.py  test_splits.py  test_types.py  test_walk_forward.py  test_yfinance_macro.py
